[package]
name = "b-epsilon-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
lru = "0.12.0"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
ser_derive = { path = "../ser_derive" }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
serde_json = "1.0.108"
