[package]
name = "b-epsilon-tree"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
lto = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.1"
derive_more = "0.99.17"
indicatif = "0.17.7"
lru = "0.12.0"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
ser_derive = { git = "https://github.com/KaminariOS/ser_derive.git" }
serde_json = "1.0.108"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
