[package]
name = "b-epsilon-tree"
version = "0.1.0"
edition = "2021"
default-run = "b-epsilon-tree"

[profile.release]
debug = true
lto = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.1"
clap = { version = "4.4.11", features = ["derive"] }
derive_more = "0.99.17"
indicatif = "0.17.7"
log = "0.4.20"
lru = "0.12.0"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
pretty_env_logger = "0.5.0"
ser_derive = { git = "https://github.com/KaminariOS/ser_derive.git" }
serde_json = "1.0.108"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
